fix vertical align

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -397,6 +397,12 @@ body {
     margin-left: 250px;
 }
 
+canvas {
+    max-width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .btn {
     background-color: #0096FF;
     border: none;
@@ -405,10 +411,13 @@ body {
     text-decoration: none;
     font-size: 16px;
     border-radius: 5px;
-    width: 10rem;
-    height: 8rem;
+    width: 12em;
+    height: 8em;
     margin-left: 20px;
+    margin-bottom: 20px;
     display: inline-block;
+    position: relative;
+    vertical-align: top;
 }
 
 .inline-block {
